test push for events storage