@@ -1,3 +1,4 @@
+import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 
@@ -11,8 +12,8 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
-import model.calendar.EventStorage;
 import model.event.Event;
 import model.event.RecurringEvent;
 
@@ -20,7 +21,6 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
 
 /**
  * Tests for the EventStorage class using a mock implementation.
@@ -44,14 +44,11 @@ public class EventStorageTest {
 
       eventById.put(event.getId(), event);
 
-      // Add to date index
       LocalDate date = event.getStartDateTime().toLocalDate();
       eventsByDate.computeIfAbsent(date, k -> new ArrayList<>()).add(event);
 
-      // Add to subject index
       eventsBySubject.computeIfAbsent(event.getSubject(), k -> new ArrayList<>()).add(event);
 
-      // Add to datetime index
       LocalDateTime startTime = event.getStartDateTime();
       eventsByDateTime.computeIfAbsent(startTime, k -> new ArrayList<>()).add(event);
     }
@@ -87,8 +84,8 @@ public class EventStorageTest {
       List<Event> result = new ArrayList<>();
       for (Map.Entry<LocalDateTime, List<Event>> entry : eventsByDateTime.entrySet()) {
         LocalDateTime dateTime = entry.getKey();
-        if ((dateTime.isEqual(start) || dateTime.isAfter(start)) && 
-            (dateTime.isEqual(end) || dateTime.isBefore(end))) {
+        if ((dateTime.isEqual(start) || dateTime.isAfter(start)) &&
+                (dateTime.isEqual(end) || dateTime.isBefore(end))) {
           result.addAll(entry.getValue());
         }
       }
@@ -159,35 +156,56 @@ public class EventStorageTest {
   @Before
   public void setUp() {
     storage = new MockEventStorage();
-    
+
     // Create sample events
     LocalDateTime now = LocalDateTime.now();
     LocalDateTime event1Start = LocalDateTime.of(2023, 5, 15, 10, 0);
     LocalDateTime event1End = LocalDateTime.of(2023, 5, 15, 11, 0);
     sampleEvent1 = new Event("Meeting", event1Start, event1End, null, null, true);
-    
+
     LocalDateTime event2Start = LocalDateTime.of(2023, 5, 15, 14, 0);
     LocalDateTime event2End = LocalDateTime.of(2023, 5, 15, 15, 0);
     sampleEvent2 = new Event("Lunch", event2Start, event2End, null, null, true);
-    
+
     LocalDateTime event3Start = LocalDateTime.of(2023, 5, 16, 10, 0);
     LocalDateTime event3End = LocalDateTime.of(2023, 5, 16, 11, 0);
     sampleEvent3 = new Event("Meeting", event3Start, event3End, null, null, true);
-    
+
     // Create recurring event
     LocalDateTime recurringStart = LocalDateTime.of(2023, 6, 1, 9, 0);
     LocalDateTime recurringEnd = LocalDateTime.of(2023, 6, 1, 10, 0);
-    
+
     // Create a set of days for the recurring event
     Set<DayOfWeek> weekdays = EnumSet.of(DayOfWeek.MONDAY, DayOfWeek.WEDNESDAY);
-    
+
     recurringEvent = new RecurringEvent.Builder(
-            "Weekly Sync", 
-            recurringStart, 
-            recurringEnd, 
+            "Weekly Sync",
+            recurringStart,
+            recurringEnd,
             weekdays)
-        .occurrences(3)
-        .build();
+            .occurrences(3)
+            .build();
+  }
+
+  @After
+  public void tearDown() {
+    // Clear all events and recurring events from storage
+    if (storage != null) {
+      for (Event event : storage.getAllEvents()) {
+        storage.removeEvent(event);
+      }
+
+      for (RecurringEvent event : storage.getAllRecurringEvents()) {
+        storage.removeRecurringEvent(event);
+      }
+    }
+
+    // Set references to null to help garbage collection
+    storage = null;
+    sampleEvent1 = null;
+    sampleEvent2 = null;
+    sampleEvent3 = null;
+    recurringEvent = null;
   }
 
   /**
@@ -207,12 +225,12 @@ public class EventStorageTest {
   @Test
   public void testAddEvent() {
     storage.addEvent(sampleEvent1);
-    
+
     List<Event> events = storage.getAllEvents();
     assertEquals(1, events.size());
     assertEquals(sampleEvent1.getId(), events.get(0).getId());
   }
-  
+
   /**
    * Test adding multiple events.
    */
@@ -221,11 +239,11 @@ public class EventStorageTest {
     storage.addEvent(sampleEvent1);
     storage.addEvent(sampleEvent2);
     storage.addEvent(sampleEvent3);
-    
+
     List<Event> events = storage.getAllEvents();
     assertEquals(3, events.size());
   }
-  
+
   /**
    * Test adding null event throws exception.
    */
@@ -233,23 +251,23 @@ public class EventStorageTest {
   public void testAddNullEvent() {
     storage.addEvent(null);
   }
-  
+
   /**
    * Test adding a recurring event.
    */
   @Test
   public void testAddRecurringEvent() {
     storage.addRecurringEvent(recurringEvent);
-    
+
     List<RecurringEvent> recurringEvents = storage.getAllRecurringEvents();
     assertEquals(1, recurringEvents.size());
     assertEquals(recurringEvent.getId(), recurringEvents.get(0).getId());
-    
+
     // The recurring event should also have added its occurrences as regular events
     List<Event> events = storage.getAllEvents();
     assertTrue(events.size() > 0);
   }
-  
+
   /**
    * Test adding null recurring event throws exception.
    */
@@ -257,19 +275,19 @@ public class EventStorageTest {
   public void testAddNullRecurringEvent() {
     storage.addRecurringEvent(null);
   }
-  
+
   /**
    * Test getting event by ID.
    */
   @Test
   public void testGetEventById() {
     storage.addEvent(sampleEvent1);
-    
+
     Event retrievedEvent = storage.getEventById(sampleEvent1.getId());
     assertNotNull(retrievedEvent);
     assertEquals(sampleEvent1.getId(), retrievedEvent.getId());
   }
-  
+
   /**
    * Test getting event by ID that doesn't exist.
    */
@@ -278,19 +296,19 @@ public class EventStorageTest {
     Event retrievedEvent = storage.getEventById(UUID.randomUUID());
     assertNull(retrievedEvent);
   }
-  
+
   /**
    * Test getting recurring event by ID.
    */
   @Test
   public void testGetRecurringEventById() {
     storage.addRecurringEvent(recurringEvent);
-    
+
     RecurringEvent retrievedEvent = storage.getRecurringEventById(recurringEvent.getId());
     assertNotNull(retrievedEvent);
     assertEquals(recurringEvent.getId(), retrievedEvent.getId());
   }
-  
+
   /**
    * Test getting recurring event by ID that doesn't exist.
    */
@@ -299,7 +317,7 @@ public class EventStorageTest {
     RecurringEvent retrievedEvent = storage.getRecurringEventById(UUID.randomUUID());
     assertNull(retrievedEvent);
   }
-  
+
   /**
    * Test getting events on a specific date.
    */
@@ -308,17 +326,17 @@ public class EventStorageTest {
     storage.addEvent(sampleEvent1);
     storage.addEvent(sampleEvent2);
     storage.addEvent(sampleEvent3);
-    
+
     LocalDate date = LocalDate.of(2023, 5, 15);
     List<Event> events = storage.getEventsOnDate(date);
     assertEquals(2, events.size());
-    
+
     // Both events should be on the specified date
     for (Event event : events) {
       assertEquals(date, event.getStartDateTime().toLocalDate());
     }
   }
-  
+
   /**
    * Test getting events on a date with no events.
    */
@@ -328,7 +346,7 @@ public class EventStorageTest {
     List<Event> events = storage.getEventsOnDate(date);
     assertEquals(0, events.size());
   }
-  
+
   /**
    * Test getting events by subject.
    */
@@ -337,14 +355,14 @@ public class EventStorageTest {
     storage.addEvent(sampleEvent1);
     storage.addEvent(sampleEvent2);
     storage.addEvent(sampleEvent3);
-    
+
     List<Event> meetingEvents = storage.getEventsBySubject("Meeting");
     assertEquals(2, meetingEvents.size());
-    
+
     List<Event> lunchEvents = storage.getEventsBySubject("Lunch");
     assertEquals(1, lunchEvents.size());
   }
-  
+
   /**
    * Test getting events by subject that doesn't exist.
    */
@@ -353,7 +371,7 @@ public class EventStorageTest {
     List<Event> events = storage.getEventsBySubject("NonExistentSubject");
     assertEquals(0, events.size());
   }
-  
+
   /**
    * Test getting events in a date-time range.
    */
@@ -362,15 +380,15 @@ public class EventStorageTest {
     storage.addEvent(sampleEvent1);
     storage.addEvent(sampleEvent2);
     storage.addEvent(sampleEvent3);
-    
+
     LocalDateTime rangeStart = LocalDateTime.of(2023, 5, 15, 9, 0);
     LocalDateTime rangeEnd = LocalDateTime.of(2023, 5, 15, 12, 0);
-    
+
     List<Event> events = storage.getEventsInRange(rangeStart, rangeEnd);
     assertEquals(1, events.size());
     assertEquals(sampleEvent1.getId(), events.get(0).getId());
   }
-  
+
   /**
    * Test getting events in a date-time range that spans multiple days.
    */
@@ -379,14 +397,14 @@ public class EventStorageTest {
     storage.addEvent(sampleEvent1);
     storage.addEvent(sampleEvent2);
     storage.addEvent(sampleEvent3);
-    
+
     LocalDateTime rangeStart = LocalDateTime.of(2023, 5, 15, 0, 0);
     LocalDateTime rangeEnd = LocalDateTime.of(2023, 5, 16, 23, 59);
-    
+
     List<Event> events = storage.getEventsInRange(rangeStart, rangeEnd);
     assertEquals(3, events.size());
   }
-  
+
   /**
    * Test getting events in a date-time range with no events.
    */
@@ -394,35 +412,35 @@ public class EventStorageTest {
   public void testGetEventsInRangeNoEvents() {
     LocalDateTime rangeStart = LocalDateTime.of(2023, 5, 20, 0, 0);
     LocalDateTime rangeEnd = LocalDateTime.of(2023, 5, 21, 0, 0);
-    
+
     List<Event> events = storage.getEventsInRange(rangeStart, rangeEnd);
     assertEquals(0, events.size());
   }
-  
+
   /**
    * Test removing an event.
    */
   @Test
   public void testRemoveEvent() {
     storage.addEvent(sampleEvent1);
-    
+
     // Verify event was added
     assertEquals(1, storage.getAllEvents().size());
-    
+
     // Remove the event
     storage.removeEvent(sampleEvent1);
-    
+
     // Verify event was removed
     assertEquals(0, storage.getAllEvents().size());
     assertNull(storage.getEventById(sampleEvent1.getId()));
-    
+
     // Also verify it's removed from the other indexes
     LocalDate date = sampleEvent1.getStartDateTime().toLocalDate();
     assertEquals(0, storage.getEventsOnDate(date).size());
-    
+
     assertEquals(0, storage.getEventsBySubject(sampleEvent1.getSubject()).size());
   }
-  
+
   /**
    * Test removing a null event throws exception.
    */
@@ -430,36 +448,36 @@ public class EventStorageTest {
   public void testRemoveNullEvent() {
     storage.removeEvent(null);
   }
-  
+
   /**
    * Test removing a recurring event.
    */
   @Test
   public void testRemoveRecurringEvent() {
     storage.addRecurringEvent(recurringEvent);
-    
+
     // Verify recurring event and occurrences were added
     assertEquals(1, storage.getAllRecurringEvents().size());
-    
+
     // Get all the occurrences before removing
     List<Event> occurrences = recurringEvent.getAllOccurrences();
     List<UUID> occurrenceIds = occurrences.stream()
-        .map(Event::getId)
-        .toList();
-    
+            .map(Event::getId)
+            .collect(Collectors.toList());
+
     // Remove the recurring event
     storage.removeRecurringEvent(recurringEvent);
-    
+
     // Verify recurring event was removed
     assertEquals(0, storage.getAllRecurringEvents().size());
     assertNull(storage.getRecurringEventById(recurringEvent.getId()));
-    
+
     // Verify all occurrences were identified and removed
     for (UUID id : occurrenceIds) {
       assertNull(storage.getEventById(id));
     }
   }
-  
+
   /**
    * Test removing a null recurring event throws exception.
    */
@@ -467,7 +485,7 @@ public class EventStorageTest {
   public void testRemoveNullRecurringEvent() {
     storage.removeRecurringEvent(null);
   }
-  
+
   /**
    * Test getting all events.
    */
@@ -477,29 +495,29 @@ public class EventStorageTest {
     storage.addEvent(sampleEvent1);
     storage.addEvent(sampleEvent2);
     storage.addEvent(sampleEvent3);
-    
+
     List<Event> events = storage.getAllEvents();
-    
+
     // Verify all events are returned
     assertEquals(3, events.size());
     assertTrue(events.stream().anyMatch(e -> e.getId().equals(sampleEvent1.getId())));
     assertTrue(events.stream().anyMatch(e -> e.getId().equals(sampleEvent2.getId())));
     assertTrue(events.stream().anyMatch(e -> e.getId().equals(sampleEvent3.getId())));
   }
-  
+
   /**
    * Test getting all recurring events.
    */
   @Test
   public void testGetAllRecurringEvents() {
     storage.addRecurringEvent(recurringEvent);
-    
+
     List<RecurringEvent> events = storage.getAllRecurringEvents();
-    
+
     assertEquals(1, events.size());
     assertEquals(recurringEvent.getId(), events.get(0).getId());
   }
-  
+
   /**
    * Test that indexes stay consistent after multiple operations.
    */
@@ -508,40 +526,40 @@ public class EventStorageTest {
     // Add events
     storage.addEvent(sampleEvent1);
     storage.addEvent(sampleEvent2);
-    
+
     // Add recurring event
     storage.addRecurringEvent(recurringEvent);
-    
+
     // Remove one event
     storage.removeEvent(sampleEvent1);
-    
+
     // Verify correct events remain
     List<Event> allEvents = storage.getAllEvents();
     int expectedCount = 1 + recurringEvent.getAllOccurrences().size();
     assertEquals(expectedCount, allEvents.size());
-    
+
     // Verify by ID
     assertNull(storage.getEventById(sampleEvent1.getId()));
     assertNotNull(storage.getEventById(sampleEvent2.getId()));
-    
+
     // Verify by date
     LocalDate date1 = sampleEvent1.getStartDateTime().toLocalDate();
     LocalDate date2 = sampleEvent2.getStartDateTime().toLocalDate();
-    
+
     List<Event> day1Events = storage.getEventsOnDate(date1);
     assertTrue(!day1Events.stream().anyMatch(e -> e.getId().equals(sampleEvent1.getId())));
-    
+
     if (date1.equals(date2)) {
       // If both events were on the same day, verify the remaining event is still findable
       assertTrue(day1Events.stream().anyMatch(e -> e.getId().equals(sampleEvent2.getId())));
     }
-    
+
     // Verify by subject
     if (sampleEvent1.getSubject().equals(sampleEvent2.getSubject())) {
       // If both events had the same subject, verify only one remains findable by subject
       List<Event> subjectEvents = storage.getEventsBySubject(sampleEvent1.getSubject());
       assertEquals(1, subjectEvents.stream()
-              .filter(e -> e.getId().equals(sampleEvent1.getId()) 
+              .filter(e -> e.getId().equals(sampleEvent1.getId())
                       || e.getId().equals(sampleEvent2.getId()))
               .count());
     }
